Iniciado desenvolvimento do player plutuante

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
     <!-- Inicio Topo Praça-->
     <header class="topo-praca">
         <div class="content flex-right">
@@ -276,7 +277,129 @@
     <!-- Inicio PodCasts -->
     <section class="section section-podcast">
         <div class="content">
+            <div class="logo-section text-nunito mfm-roxo">
+                <div class="titulo-img">
+                    <img src="images/logo-branco.png" alt="">
+                </div>
+                <div class="titulo">
+                    <h1>Ouça</h1>
+                </div>
+            </div>
+            <header>
+                <div class="title text-nunito">
+                    <h1>Podcast Massa FM</h1>
+                </div>
+                <div class="separador"></div>
+            </header>
+            <div class="podcast-container">
+                <div class="podcast-box">
+                    <div class="plataformas">
+                        <h2>Ouça também em:</h2>
+                        <a href="#" class="tooltip">
+                            <img src="images/spotify.png" alt="Spotify">
+                            <span class="tooltiptext">Spotify</span>
+                        </a>
+                        <a href="https://www.deezer.com/us/playlist/5362906962" class="tooltip">
+                            <img src="images/deezer.png" target="_blank" alt="Deezer">
+                            <span class="tooltiptext">Deezer</span>
+                        </a>
+                        <a href="#" target="_blank" class="tooltip">
+                            <img src="images/google_podcasts.png" alt="Google Podcasts">
+                            <span class="tooltiptext">Google Podcasts</span>
+                        </a>
+                        <a href="#" class="tooltip">
+                            <img src="images/apple_podcasts.png" alt="Apple Podcasts">
+                            <span class="tooltiptext">Apple Podcasts</span>
+                        </a>
+                    </div>
+                    <div class="podcast-banner">
+                        <img src="images/PODCAST.png" alt="">
+                    </div>
+                    <div class="podcast-list">
+                        <ul>
+                            <li>
+                                <div class="podcast-item-player">
+                                    <div class="track" url="podcasts/audio1.mp3"></div>
+                                    <div class="controls">
+                                        <a href="#" class="btn-play" id="play-5">
+                                            <h3><i class="mdi mdi-play-circle-outline"></i></h3>
+                                        </a>
+                                    </div>
+                                    <div class="progresso">
+                                        <div class="seekbar">
+                                            <input type="range" value="0" />
+                                        </div>
+                                        <div class="current-duration">00:00</div>
+                                        <div class="total-duration">00:00</div>
+                                    </div>
+                                </div>
+                                <div class="podcast-item-detail">
+                                    <h2 class="podcast-chapeu mfm-roxo">#MassaFM | Episódio 5</h2>
+                                    <h1 class="podcast-titulo mfm-roxo">Tema do Podcast Ep. 05</h1>
+                                    <h4 class="podcast-data mfm-cinza">31 de março de 2020</h4>
+                                    <div class="podcast-item-detail-info">
 
+                                        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae officiis tenetur illum adipisci omnis ipsum sunt optio iste rerum dolorum porro blanditiis, quae itaque labore velit impedit earum saepe aliquam.
+                                        </h3>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="podcast-item-player"></div>
+                                <div class="podcast-item-detail">
+                                    <h2 class="podcast-chapeu mfm-roxo">#MassaFM | Episódio 4</h2>
+                                    <h1 class="podcast-titulo mfm-roxo">Tema do Podcast Ep. 04</h1>
+                                    <h4 class="podcast-data mfm-cinza">24 de março de 2020</h4>
+                                    <div class="podcast-item-detail-info">
+
+                                        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae officiis tenetur illum adipisci omnis ipsum sunt optio iste rerum dolorum porro blanditiis, quae itaque labore velit impedit earum saepe aliquam.
+                                        </h3>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="podcast-item-player"></div>
+                                <div class="podcast-item-detail">
+                                    <h2 class="podcast-chapeu mfm-roxo">#MassaFM | Episódio 3</h2>
+                                    <h1 class="podcast-titulo mfm-roxo">Tema do Podcast Ep. 03</h1>
+                                    <h4 class="podcast-data mfm-cinza">17 de março de 2020</h4>
+                                    <div class="podcast-item-detail-info">
+
+                                        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae officiis tenetur illum adipisci omnis ipsum sunt optio iste rerum dolorum porro blanditiis, quae itaque labore velit impedit earum saepe aliquam.
+                                        </h3>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="podcast-item-player"></div>
+                                <div class="podcast-item-detail">
+                                    <h2 class="podcast-chapeu mfm-roxo">#MassaFM | Episódio 2</h2>
+                                    <h1 class="podcast-titulo mfm-roxo">Tema do Podcast Ep. 02</h1>
+                                    <h4 class="podcast-data mfm-cinza">10 de março de 2020</h4>
+                                    <div class="podcast-item-detail-info">
+
+                                        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae officiis tenetur illum adipisci omnis ipsum sunt optio iste rerum dolorum porro blanditiis, quae itaque labore velit impedit earum saepe aliquam.
+                                        </h3>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="podcast-item-player"></div>
+                                <div class="podcast-item-detail">
+                                    <h2 class="podcast-chapeu mfm-roxo">#MassaFM | Episódio 1</h2>
+                                    <h1 class="podcast-titulo mfm-roxo">Tema do Podcast Ep. 01</h1>
+                                    <h4 class="podcast-data mfm-cinza">03 de março de 2020</h4>
+                                    <div class="podcast-item-detail-info">
+
+                                        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae officiis tenetur illum adipisci omnis ipsum sunt optio iste rerum dolorum porro blanditiis, quae itaque labore velit impedit earum saepe aliquam.
+                                        </h3>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- Fim PodCasts -->
@@ -290,11 +413,30 @@
     <!-- Fim Peça sua música -->
 
 
-    <!-- Inicio Noticias -->
-    <!-- Fim Noticias -->
+    <!-- Inicio Rodapé -->
+    <!-- Fim Rodapé -->
 
 
-    <script src="js/scripts.js"></script>
+    <!-- Inicio Player -->
+    <section class="section flyer-player">
+        <div class="operate-box">
+            <span class="mdi mdi-chevron-down btn-min-max"></span>
+            <span class="mdi mdi-close btn-close"></span>
+        </div>
+        <div class="section player ">
+            <div class="content">
+                <div class="titulo-img">
+                    <img src="images/logo-bg-player.png" alt="">
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+    <!-- Fim Player -->
+
+
+    <script src="js/scripts.js" type="module"></script>
 </body>
 
 </html>
