--- a/src/artigo.html
+++ b/src/artigo.html
@@ -292,16 +292,16 @@
 
 
     <!-- Inicio Player -->
-    <section class="section flyer-player" data-turbolinks-permanent>
+    <section id="flyer-player" class="section flyer-player" data-turbolinks-permanent>
         <div class="operate-box">
             <span class="mdi mdi-chevron-up btn-min-max"></span>
-            <span class="mdi mdi-close btn-close"></span>
+            <span class="mdi mdi-dock-window btn-close"></span>
         </div>
-        <div class="section player minimized">
+        <div class="section player minimized hide">
             <div class="content">
                 <!-- <div class="titulo-img">
-                    <img src="images/logo-bg-player.png" alt="">
-                </div> -->
+                        <img src="images/logo-bg-player.png" alt="">
+                    </div> -->
                 <div class="player-box">
                     <div class="box-logo-play">
                         <img id="img-cover" src="./images/logo_podcasts.png" alt="">
@@ -345,7 +345,6 @@
         </div>
     </section>
     <!-- Fim Player -->
-
 
     <script src="js/scripts.js" type="module"></script>
 </body>
