Finalizado correções do topo e menu

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <meta name="turbolinks-cache-control" content="no-cache">
     <script src="js/turbolinks.js" data-turbolinks-track="reload"></script>
     <script src="js/podcasts.js" data-turbolinks-eval="false"></script>
-    <script src="js/scripts.js" data-turbolinks-eval="true" type="module"></script>
+    <script src="js/scripts.js" data-turbolinks-eval="false" type="module"></script>
 
 </head>
 
@@ -18,11 +18,14 @@
 
     <!-- Inicio Topo Praça-->
     <header class="topo-praca">
-        <div class="content flex-right">
+        <div class="content">
+            <div class="btn-player" data-url="https://stm01.virtualcast.com.br:8118/live" data-title="Massa FM 97.7 - ao vivo" data-img="images/logo_player.png">ABRIR O PLAYER
+                <span class="mdi mdi-play-circle"></span>
+            </div>
             <div class="praca">
                 <h3>VOCÊ ESTÁ EM</h3>
                 <div class="select">
-                    <h3>CURITIBA | MASSA FM 97.7 <span class="mdi mdi-menu-down"></span></h3>
+                    <h3>CURITIBA | MASSA FM 97.7 </h3><span class="mdi mdi-menu-down"></span>
                 </div>
             </div>
         </div>
@@ -107,7 +110,7 @@
     <!-- Fim Topo Praça-->
 
     <!-- Inicio Menu topo -->
-    <section class="section-menu-topo">
+    <section class="section section-menu-topo">
         <div class="content flex">
             <a href="#" class="nav-toggle mfm-roxo"><i class="mdi mdi-menu"></i></a>
             <div class="menu-topo">
@@ -119,7 +122,7 @@
                     <nav>
                         <ul>
                             <li>
-                                <a href="index.html" class="menu-active"><span class="mdi mdi-home icon"></span>
+                                <a href="index.html"><span class="mdi mdi-home icon"></span>
                                 Home
                             </a>
                             </li>
@@ -183,7 +186,7 @@
                         <div class="card-title">Você no Ouro Fino Rodeio Festival 2018</div>
                         <div class="card-body">A Massa FM vai te levar para o Ouro Fino Rodeio Festival e ainda te deixar “Cara a cara” com os artistas.</div>
                         <div class="card-footer">
-                            <a href="#" class="btn-card bg-gradient-roxo-magenta">CLIQUE E PARTICIPE</a>
+                            <a href="#" class="btn-card">CLIQUE E PARTICIPE</a>
                         </div>
                     </div>
                 </div>
@@ -220,7 +223,7 @@
                                 </div>
                                 <div class="box-details">
                                     <div class="box-details-info">
-                                        <a href="#" class="btn-card bg-gradient-roxo-magenta px-5">PARTICIPE</a>
+                                        <a href="#" class="btn-card">PARTICIPE</a>
                                     </div>
                                 </div>
                             </div>
@@ -233,7 +236,7 @@
                                 </div>
                                 <div class="box-details">
                                     <div class="box-details-info">
-                                        <a href="#" class="btn-card bg-gradient-roxo-magenta px-5">PARTICIPE</a>
+                                        <a href="#" class="btn-card">PARTICIPE</a>
                                     </div>
                                 </div>
                             </div>
@@ -245,7 +248,7 @@
                                 </div>
                                 <div class="box-details">
                                     <div class="box-details-info">
-                                        <a href="#" class="btn-card bg-gradient-roxo-magenta px-5">PARTICIPE</a>
+                                        <a href="#" class="btn-card">PARTICIPE</a>
                                     </div>
                                 </div>
                             </div>
@@ -352,7 +355,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row-footer"><a href="#" class="bnt-enviar bg-gradient-roxo-magenta"> Carregar Mais</a></div>
+            <div class="row-footer"><a href="#" class="btn-card"> Carregar Mais</a></div>
         </div>
     </section>
     <!-- Fim Noticias -->
