Finalizado Banner Rotativo "HOME"

--- a/src/index.html
+++ b/src/index.html
@@ -179,25 +179,82 @@
 
     <!-- Inicio Banner Rotativo topo -->
     <section class="banner-slide">
-        <div class="banner-background" id="1" style="background-image: url('images/BANNER-HOME.png'); ">
-            <div class="banner-overlay">
-                <div class="banner-content grid-container">
-                    <div class="banner-card">
-                        <div class="card-title">Você no Ouro Fino Rodeio Festival 2018</div>
-                        <div class="card-body">A Massa FM vai te levar para o Ouro Fino Rodeio Festival e ainda te deixar “Cara a cara” com os artistas.</div>
-                        <div class="card-footer">
-                            <a href="#" class="btn-card">CLIQUE E PARTICIPE</a>
+        <div class="slider-content">
+            <div class="slider-carrousel">
+                <div class="carousel-item" id="881" style="background-image: url('images/BANNER-HOME.png'); ">
+                    <div class="banner-overlay">
+                        <div class="banner-content grid-container">
+                            <div class="card-info">
+                                <div class="card-title">
+                                    <h3>Você no Ouro Fino Rodeio Festival 2018</h3>
+                                </div>
+                                <div class="card-body">
+                                    <p> A Massa FM vai te levar para o Ouro Fino Rodeio Festival e ainda te deixar “Cara a cara” com os artistas.</p>
+                                </div>
+                                <div class="card-footer">
+                                    <a href="#" class="btn-card">CLIQUE E PARTICIPE</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item " id="882" style="background-image: url('images/bg-woman.jpg'); ">
+                    <div class="banner-overlay">
+                        <div class="banner-content grid-container">
+                            <div class="card-info">
+                                <div class="card-title">
+                                    <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+                                </div>
+                                <div class="card-body">
+                                    <p>Integer faucibus, risus et imperdiet lacinia, mauris mi varius tellus, et laoreet lorem justo vel magna.</p>
+                                </div>
+                                <div class="card-footer">
+                                    <a href="#" class="btn-card">CLIQUE E PARTICIPE</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item " id="883" style="background-image: url('images/bg-celular-fone.jpg'); ">
+                    <div class="banner-overlay">
+                        <div class="banner-content grid-container">
+                            <div class="card-info">
+                                <div class="card-title">
+                                    <h3>Phasellus egestas libero est, eget suscipit lectus.</h3>
+                                </div>
+                                <div class="card-body">
+                                    <p>Mauris non mi sed tellus ullamcorper bibendum. Morbi lectus lorem, commodo sit amet egestas.</p>
+                                </div>
+                                <div class="card-footer">
+                                    <a href="#" class="btn-card">CLIQUE E PARTICIPE</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <span class="mdi mdi-chevron-left prev-slide"></span>
-        <span class="mdi mdi-chevron-right next-slide"></span>
-        <div class="bullets-wrapper">
-            <div class="bullet-item slide-3544" slide="3544"></div>
-            <div class="bullet-item slide-3542" slide="3542"></div>
-            <div class="bullet-item slide-3352 active" slide="3352"></div>
+        <div class="content banner-content">
+            <div class="banner-card">
+                <div class="card-title">
+                    <h3></h3>
+                </div>
+                <div class="card-body">
+                    <p></p>
+                </div>
+                <div class="card-footer">
+                    <a href="#" class="btn-card">CLIQUE E PARTICIPE</a>
+                    <nav>
+                        <span class="mdi mdi-chevron-left banner-nav prev-slide"></span>
+                        <span class="mdi mdi-chevron-right banner-nav next-slide"></span>
+                    </nav>
+                </div>
+            </div>
+            <div class="bullets-wrapper">
+                <div class="bullet-item  active" slide="881"></div>
+                <div class="bullet-item" slide="882"></div>
+                <div class="bullet-item" slide="883"></div>
+            </div>
         </div>
     </section>
     <!-- Fim Inicio Banner Rotativo topo -->
