Finalizado sessão "Noticias"

--- a/src/index.html
+++ b/src/index.html
@@ -321,15 +321,10 @@
     <!-- Inicio Noticias -->
     <section class="section noticias">
         <div class="content">
-            <div class="logo-section mfm-roxo">
-                <div class="titulo-img">
-                    <img src="images/logo-branco.png" alt="">
-                </div>
-                <div class="titulo">
+            <header>
+                <div class="chapeu">
                     <h1>Destaques</h1>
                 </div>
-            </div>
-            <header>
                 <div class="title">
                     <h1>Notícias Massa FM</h1>
                 </div>
@@ -338,7 +333,7 @@
 
             <div class="featured-posts">
                 <div class="grid-noticias">
-                    <div class="grid-50 tablet-grid-50 mobile-grid-100">
+                    <div class="destaque">
                         <a href="artigo.html" class="post-item featured box-shadow" style="background-image:url('images/noticias-img01.jpg');">
                             <div class="box-badge">
                                 Notícias
@@ -352,8 +347,8 @@
                             </div>
                         </a>
                     </div>
-                    <div class="no-pad tablet-grid-50 grid-50 mobile-grid-100">
-                        <div class="grid-50 tablet-grid-50 mobile-grid-100">
+                    <div class="miniaturas">
+                        <div class="grid-50 tablet-grid-50 mobile-grid-100 menores">
                             <a href="artigo.html" class="post-item box-shadow" style="background-image:url('images/noticias-img02.jpg');">
                                 <div class="box-badge">
                                     Notícias
