Finalizado Sessão PodCast

--- a/src/index.html
+++ b/src/index.html
@@ -416,15 +416,10 @@
     <!-- Inicio PodCasts -->
     <section class="section section-podcast" id="section-podcast" data-turbolinks-permanent>
         <div class="content">
-            <div class="logo-section mfm-roxo">
-                <div class="titulo-img">
-                    <img src="images/logo-branco.png" alt="">
-                </div>
-                <div class="titulo">
+            <header>
+                <div class="chapeu">
                     <h1>Ouça</h1>
                 </div>
-            </div>
-            <header>
                 <div class="title">
                     <h1>Podcast Massa FM</h1>
                 </div>
@@ -432,25 +427,6 @@
             </header>
             <div class="podcast-container">
                 <div class="podcast-box">
-                    <div class="plataformas">
-                        <h2>Ouça também em:</h2>
-                        <a href="#" class="tooltip">
-                            <img src="images/spotify.png" alt="Spotify">
-                            <span class="tooltiptext">Spotify</span>
-                        </a>
-                        <a href="https://www.deezer.com/us/playlist/5362906962" class="tooltip">
-                            <img src="images/deezer.png" target="_blank" alt="Deezer">
-                            <span class="tooltiptext">Deezer</span>
-                        </a>
-                        <a href="#" target="_blank" class="tooltip">
-                            <img src="images/google_podcasts.png" alt="Google Podcasts">
-                            <span class="tooltiptext">Google Podcasts</span>
-                        </a>
-                        <a href="#" class="tooltip">
-                            <img src="images/apple_podcasts.png" alt="Apple Podcasts">
-                            <span class="tooltiptext">Apple Podcasts</span>
-                        </a>
-                    </div>
                     <div class="podcast-banner">
                         <div class="title-banner">
                             POD<br>CAST
@@ -462,6 +438,28 @@
                             <img src="images/microfone.png" alt="">
                         </div>
                     </div>
+                    <div class="plataformas">
+                        <h2>Ouça também em:</h2>
+                        <div class="icons">
+                            <a href="#" class="tooltip">
+                                <img src="images/spotify.png" alt="Spotify">
+                                <span class="tooltiptext">Spotify</span>
+                            </a>
+                            <a href="https://www.deezer.com/us/playlist/5362906962" class="tooltip">
+                                <img src="images/deezer.png" target="_blank" alt="Deezer">
+                                <span class="tooltiptext">Deezer</span>
+                            </a>
+                            <a href="#" target="_blank" class="tooltip">
+                                <img src="images/google_podcasts.png" alt="Google Podcasts">
+                                <span class="tooltiptext">Google Podcasts</span>
+                            </a>
+                            <a href="#" class="tooltip">
+                                <img src="images/apple_podcasts.png" alt="Apple Podcasts">
+                                <span class="tooltiptext">Apple Podcasts</span>
+                            </a>
+                        </div>
+                    </div>
+
                     <div class="podcast-list">
                         <ul>
                             <li>
