Finalizado sessão Programação

--- a/src/index.html
+++ b/src/index.html
@@ -623,18 +623,14 @@
     <!-- Inicio Programação -->
     <section class="section programacao">
         <div class="content">
-            <header class="logo-section mfm-roxo">
-                <div class="header-img">
-                    <img src="images/logo-branco.png" alt="">
-                </div>
-                <div class="header">
+            <header>
+                <div class="chapeu">
                     <h1>Programação</h1>
-                    <p>sit amet, consectetuer adipiscing elit, sed diam: nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam</p>
                 </div>
             </header>
             <div class="tab-programacao">
                 <div class="btns-box">
-                    <ul class="tab-buttons box-shadow">
+                    <ul class="tab-buttons">
                         <li class="tab-btn active-btn" data-tab="tb0" id="btn0">Domingo</li>
                         <li class="tab-btn" data-tab="tb1" id="btn1">Segunda</li>
                         <li class="tab-btn" data-tab="tb2" id="btn2">Terça</li>
