Finalizado sessão "Peça sua musica"

--- a/src/index.html
+++ b/src/index.html
@@ -1251,7 +1251,7 @@
                                 <span class="bar"></span>
                                 <label>Música</label>
                             </div>
-                            <input type="button" class="bnt-enviar bg-gradient-roxo-magenta" value="ENVIAR">
+                            <input type="submit" class="btn-card bnt-enviar" value="ENVIAR">
                         </form>
                     </div>
                 </div>
