--- a/src/index.html
+++ b/src/index.html
@@ -1268,19 +1268,19 @@
                 <span class="mdi mdi-chevron-up botao-up"></span>
             </div>
             <div class="social">
-                <a href="#" class="icon-button facebook bg-gradient-amarelo-laranja">
+                <a href="#" class="icon-button facebook bg-white">
                     <i class="mdi mdi-facebook icon-facebook"></i>
                     <span class="bg-social-icon"></span>
                 </a>
-                <a href="#" class="icon-button twitter bg-gradient-amarelo-laranja">
+                <a href="#" class="icon-button twitter bg-white">
                     <i class="mdi mdi-twitter icon-twitter"></i>
                     <span class="bg-social-icon"></span>
                 </a>
-                <a href="#" class="icon-button youtube bg-gradient-amarelo-laranja">
+                <a href="#" class="icon-button youtube bg-white">
                     <i class="mdi mdi-youtube icon-youtube"></i>
                     <span class="bg-social-icon"></span>
                 </a>
-                <a href="#" class="icon-button whatsapp bg-gradient-amarelo-laranja">
+                <a href="#" class="icon-button whatsapp bg-white">
                     <i class="mdi mdi-whatsapp icon-whatsapp"></i>
                     <span class="bg-social-icon"></span>
                 </a>
