Alterações em podcast e Footer

--- a/src/index.html
+++ b/src/index.html
@@ -585,7 +585,7 @@
                     <div class="podcast-item-player">
                       <div class="controls">
                         <div class="btn-play play first" id="play-5">
-                          <div class="track" url="podcasts/audio1.mp3" title="Tema do Podcast Ep. 05"></div>
+                          <div class="track" url="podcasts/audio1.mp3" img="images/logo_podcasts.png" title="Tema do Podcast Ep. 05"></div>
                           <div class="border-gradient">
                             <div class="equalize">
                               <i class="everlib-logo-first-bar"></i>
@@ -613,7 +613,7 @@
                     <div class="podcast-item-player">
                       <div class="controls">
                         <a href="#" class="btn-play play first" id="play-4">
-                          <div class="track" url="podcasts/audio2.mp3" title="Tema do Podcast Ep. 04"></div>
+                          <div class="track" url="podcasts/audio2.mp3" img="images/logo_podcasts.png" title="Tema do Podcast Ep. 04"></div>
                           <div class="border-gradient">
                             <div class="equalize">
                               <i class="everlib-logo-first-bar"></i>
@@ -1072,6 +1072,9 @@
             </li>
           </ul>
         </nav>
+        <div class="row-endereco">
+          <span> Rua Zem Bertapelle, 531 <br />Santa Felicidade - Curitiba | PR <br />82030-430</span>
+        </div>
         <div class="row-logo">
           <img src="images/logo-rodape.png" alt="" />
         </div>
