--- a/src/singleYT.html
+++ b/src/singleYT.html
@@ -299,41 +299,43 @@
           <div class="see-more">
             <h1>Veja também</h1>
           </div>
-          <div class="col-50">
-            <div class="card">
-              <a href="#" class="card-image" style="background-image: url('images/live-sertaneja-maiara-e-maraisa.png');"> </a>
-              <div class="card-content">
-                <a href="#">
-                  <h5 class="title">AS MELHORES MÚSICAS PARA ESSE VERÃO</h5>
-                </a>
-                <p class="meta">27 de Novembro de 2020. Por Massa FM 92.9 São Paulo</p>
-                <p class="excerpt">
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-                  aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-                  aliquip ex ea commodo consequat.
-                </p>
-              </div>
-              <div class="card-footer">
-                <a href="#" class="btn-readmore">Leia Mais</a>
+          <div class="row">
+            <div class="col-50">
+              <div class="card">
+                <a href="#" class="card-image" style="background-image: url('images/live-sertaneja-maiara-e-maraisa.png');"> </a>
+                <div class="card-content">
+                  <a href="#">
+                    <h5 class="title">Caminhão carregado com cerveja tem carga tombada em marginal de rodovia na RMC</h5>
+                  </a>
+                  <p class="meta">27 de Novembro de 2020. Por Massa FM 92.9 São Paulo</p>
+                  <p class="excerpt">
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                    magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                    ut aliquip ex ea commodo consequat.
+                  </p>
+                </div>
+                <div class="card-footer">
+                  <a href="#" class="btn-readmore">Leia Mais</a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-50">
-            <div class="card">
-              <a href="#" class="card-image" style="background-image: url('images/naom_5e8ef44860720.png');"> </a>
-              <div class="card-content">
-                <a href="#">
-                  <h5 class="title">AS MELHORES MÚSICAS PARA ESSE VERÃO</h5>
-                </a>
-                <p class="meta">27 de Novembro de 2020. Por Massa FM 92.9 São Paulo</p>
-                <p class="excerpt">
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-                  aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-                  aliquip ex ea commodo consequat.
-                </p>
-              </div>
-              <div class="card-footer">
-                <a href="#" class="btn-readmore">Leia Mais</a>
+            <div class="col-50">
+              <div class="card">
+                <a href="#" class="card-image" style="background-image: url('images/naom_5e8ef44860720.png');"> </a>
+                <div class="card-content">
+                  <a href="#">
+                    <h5 class="title">AS MELHORES MÚSICAS PARA ESSE VERÃO</h5>
+                  </a>
+                  <p class="meta">27 de Novembro de 2020. Por Massa FM 92.9 São Paulo</p>
+                  <p class="excerpt">
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                    magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                    ut aliquip ex ea commodo consequat.
+                  </p>
+                </div>
+                <div class="card-footer">
+                  <a href="#" class="btn-readmore">Leia Mais</a>
+                </div>
               </div>
             </div>
           </div>
