Ajustes no modo responsivo

--- a/src/index.html
+++ b/src/index.html
@@ -22,13 +22,14 @@
           data-title="Massa FM 97.7 - ao vivo"
           data-img="images/logo_player.png"
         >
-          ABRIR O PLAYER
+          OUÇA AQUI
           <span class="mdi mdi-play-circle"></span>
         </div>
         <div class="praca">
           <h3>VOCÊ ESTÁ EM</h3>
           <div class="select">
-            <h3>CURITIBA | MASSA FM 97.7</h3>
+            <h3>SÃO JOSÉ DOS PINHAIS | MASSA FM 97.7</h3>
+            <h3 class="mobile">ESCOLHA SUA PRAÇA</h3>
             <span class="mdi mdi-menu-down"></span>
           </div>
         </div>
