Correção na busca de promoções pela API

--- a/src/podcasts.html
+++ b/src/podcasts.html
@@ -332,8 +332,9 @@
       <div class="right-sidebar">
         <div class="widgets sticky">
           <div class="search-box">
-            <form>
-              <input type="text" name="search" id="search" placeholder="Procurar..." />
+            <form action="" class="form-search">
+              <input type="search" name="search" id="search" placeholder="Procurar..." />
+              <button><i class="mdi mdi-magnify"></i></button>
             </form>
           </div>
           <div class="text-sidebar">
