--- a/src/singleYT.html
+++ b/src/singleYT.html
@@ -271,7 +271,7 @@
                   class="video"
                   width="367"
                   height="270"
-                  src="https://www.youtube.com/embed/Nc_LJ5XOwmI?rel=0"
+                  src="https://www.youtube.com/embed/Dqb2KY6F4iw?rel=0"
                   frameborder="0"
                   allow="showinfo; accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen
@@ -349,8 +349,9 @@
       <div class="right-sidebar">
         <div class="widgets">
           <div class="search-box">
-            <form>
-              <input type="text" name="search" id="search" placeholder="Procurar..." />
+            <form action="" class="form-search">
+              <input type="search" name="search" id="search" placeholder="Procurar..." />
+              <button><i class="mdi mdi-magnify"></i></button>
             </form>
           </div>
           <div class="text-sidebar">
