--- a/src/single.html
+++ b/src/single.html
@@ -348,8 +348,9 @@
       <div class="right-sidebar">
         <div class="widgets">
           <div class="search-box">
-            <form>
-              <input type="text" name="search" id="search" placeholder="Procurar..." />
+            <form action="" class="form-search">
+              <input type="search" name="search" id="search" placeholder="Procurar..." />
+              <button><i class="mdi mdi-magnify"></i></button>
             </form>
           </div>
           <div class="text-sidebar">
